// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CatalogTableHeader /> check render properly 1`] = `
<div
  className="catalog__header"
>
  <div
    className="catalog-search-box"
  >
    <SearchBox
      key=""
      onSearchSubmit={[MockFunction]}
      value=""
    />
  </div>
  <SortBox
    customClasses="catalog-sort-box"
    onSortChange={[MockFunction]}
    sortColumnKey="title"
    sortOptions={
      Array [
        Object {
          "id": "title_desc",
          "name": "Title Z-A",
        },
      ]
    }
  />
</div>
`;

exports[`<CatalogTableHeader /> check render with searchQuery provided 1`] = `
<div
  className="catalog__header"
>
  <div
    className="catalog-search-box"
  >
    <SearchBox
      key="test query"
      onSearchSubmit={[MockFunction]}
      value="test query"
    />
  </div>
  <SortBox
    customClasses="catalog-sort-box"
    onSortChange={[MockFunction]}
    sortColumnKey="title"
    sortOptions={
      Array [
        Object {
          "id": "title_desc",
          "name": "Title Z-A",
        },
      ]
    }
  />
</div>
`;

exports[`<CatalogTableHeader /> render AddNewProduct button with currentUserRole admin provided 1`] = `
<div
  className="catalog__header"
>
  <div
    className="catalog-search-box"
  >
    <SearchBox
      key=""
      onSearchSubmit={[MockFunction]}
      value=""
    />
  </div>
  <Link
    className="button button-solid catalog-add-product-btn"
    to="/edit/products/new"
  >
    Add New Product
  </Link>
  <SortBox
    customClasses="catalog-sort-box"
    onSortChange={[MockFunction]}
    sortColumnKey="title"
    sortOptions={
      Array [
        Object {
          "id": "title_desc",
          "name": "Title Z-A",
        },
      ]
    }
  />
</div>
`;
